--- a/Frontend/app_astro/package.json
+++ b/Frontend/app_astro/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.0.5",
+    "@astrojs/vue": "^3.0.4",
     "astro": "^3.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.69.5",
     "vue": "^3.3.8"
   }
 }
